# Voice-Controlled-Robotic-Sorter

./: .gitmodules  Dockerfile  README.md  test_mic.py
.docker/: build.bash  run.bash
panda/: README.md
panda_description/: CMakeLists.txt  README.md  package.xml
panda_description/cmake/environment_hooks/: gz_sim_resource_path.bash
panda_description/config/: initial_joint_positions.yaml
panda_description/launch/: view_gz.launch.py
panda_description/panda/: model.sdf
panda_description/scripts/: xacro2sdf.bash
panda_description/urdf/: panda.gazebo  panda.ros2_control  panda.urdf  panda.urdf.xacro
panda_description/worlds/: tabletop.sdf
panda_moveit_config/: CMakeLists.txt  README.md  package.xml
panda_moveit_config/config/: controllers_effort.yaml  controllers_position.yaml  gz_bridge.yaml  ompl_planning.yaml
panda_moveit_config/launch/: ex_fake_control.launch.py  ex_gz_control.launch.py  move_group.launch.py
panda_moveit_config/rviz/: moveit.rviz
panda_moveit_config/scripts/: action_node.py  benchmark.py  benchmark_comprehensive.py  bt_pick_place.py  command_parser.py  gpd.py  robot_interface.py  speech_node.py
panda_moveit_config/srdf/: panda.srdf
